Sat Aug 30 22:45:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_shift): fix memory leak.

Sat Aug 30 20:06:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (struct rb_thread_struct): added signal and message
	  queues.

	* thread.c (rb_queue_initialize, rb_queue_destroy, rb_queue_push),
	  (rb_queue_shift): new functions.

	* thread.c (rb_thread_execute_interrupts): uses signal queue.

	* thread.c (ruby_vm_send_signal): extracted from vm_send_signal.

	* vm.c (vm_free): unlock and destroys global_vm_lock.

	* vm.c (th_init2, thread_free): initializes and destroys signal and
	  message queues.

Sat Aug 30 20:05:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_open, rb_w32_read, rb_w32_write): fallback to
	  MSVCRT if text mode is specified. this case will not be used from
	  ruby itself.

Sat Aug 30 19:49:38 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): EOF is not error.
	  ref [ruby-dev:36050]

Sat Aug 30 18:17:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (struct token_info): constified.

	* parse.y (token_info_get_column, token_info_has_nonspaces),
	  (token_info_push, token_info_pop): constified.

Sat Aug 30 16:38:23 2008    <nobu@ruby-lang.org>

	* vm_core.h (struct rb_vm_struct): replaced signal staff with trap
	  staff.

	* signal.c (signal_buff): per process resouce now.

	* signal.c (trap_list): moved to VM.

	* signal.c (rb_get_next_signal): reverted.

	* signal.c (rb_trap_exit): trap_pending_list was no longer used.

	* thread.c (timer_thread_function): delivers buffered per-process
	  signals to each VMs.

	* vm.c (rb_vm_mark): marks trap_list.

Sat Aug 30 15:43:03 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/openssl/ossl_config.c (Init_ossl_config): memory leak fixed.
	  a patch <shinichiro.hamaji at gmail.com> in [ruby-dev:35880].

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): ditto.
